--- a/webapp/WEB-INF/classes/trans_en_US.properties
+++ b/webapp/WEB-INF/classes/trans_en_US.properties
@@ -1,13 +1,13 @@
-#Fri Jul 16 00:07:13 MST 2010
+#Fri Jul 16 00:27:00 MST 2010
 1742503604=Bible software developed for Palm.
 1397839042=What is power search?
 1121727836=Biblical Texts
 105=i
 104=h
 80048383=OTHER BIBLE TOOLS
--304067748=This is a printer friendly version
 101=e
 -26833613=Unbound Bible,
+-304067748=This is a printer friendly version
 1751792767=Popup footnotes
 84883943=UPLOAD TEXTS
 100=d
@@ -21,10 +21,10 @@
 -629520390=Hide Parallel Tab
 -2132933458=Ignore Case (UPPER/lower isn't strictly matched)
 -1638610202=ABOUT THE BIBLE TOOL
--1807907639=Style\:
 1397500449=Unicode 4.0 (including Plane 1) support
--440858376=
+-1807907639=Style\:
 -2120284785=What can I do with preferences?
+-440858376=
 1991517885=United Bible Societies
 -1621785194=External Links\:
 771412785=New language locales
@@ -38,7 +38,9 @@
 1063422380=A number of things. You can select preferred Bible translations and other texts, so that your search or study only references your preferred selections. You can also add / remove tabs at the top, depending on texts or functionality that you like or perhaps don&rsquo;t use. You can also choose the tool&rsquo;s skin. Our goal is to give you as many preferences as possible, and we&rsquo;ll be adding more in the coming months.
 3259=Persian/Farsi
 137584316=Be sure to check out these other sites for free Bible resources\:  
+-1660377174=Hide Daily Devotionals Tab
 1236046375=Parallel
+-898880764=Hide About Tab
 -1955964497=What can I do with Preferences?
 -433513342=What is Power Search?
 76705939=K\u00F6rp\u00FC
@@ -46,38 +48,38 @@
 -872325569=Morphology is the information about the language parsing of a word, such as the tense, voice or mood. You can click on the morph codes following the words to view the parsing of that word
 177903544=An <acronym title\="Open Scripture Information Standard">OSIS</acronym> editing tool plug-in for Microsoft Word 2003 is under construction. The tool will be completed in the spring, 2004, and will let you encode texts in <acronym title\="Open Scripture Information Standard">OSIS</acronym>  for use in the tools available on this site.
 2085139382=Essays
-1113579794=Preferred Style
 99473=Divehi
+1113579794=Preferred Style
 92048783=Limit Search to Range\:
 -742621714=Bible Research Center
-139206051=Bible software developed for the Windows operating environment. Features include\:
 -1900473501=Crosswalk,
+139206051=Bible software developed for the Windows operating environment. Features include\:
 15980382=You can get CrossWire SWORD software, on which this tool was built, by getting in touch with 
 1845821898=Image Support
 97=a
-1640065951=
 -1278213999=OSIS is a key technical piece that will allow this to happen. Other key pieces include partnerships between organizations like SBL and ABS (to insure large distribution channels), and good content, such as making modern translations and helpful related materials available. That will be a big focus in the coming months.
--1946624683=Interactive Maps
+1640065951=
 -637237544=Preferences
+-1946624683=Interactive Maps
 234742413=Hide FAQ Tab
 -451549348=Glossaries
 116358771=Yes. This tool was built using open source code, so feel free to use it however you like.
 920334141=All Comentaries
--1205385002=Search Term\:
 -253594524=by keyword or phrase\:
+-1205385002=Search Term\:
 -1903471366=What are Strong&rsquo;s Numbers?
--1142430264=Result Page\:
 115861276=Chinese (Simplified)
+-1142430264=Result Page\:
 -85337195=What is parallel study?
 -793947317=Is the Bible Tool available on CD?
 -537727964=
 -1204791352=Search Type\:
 -1659716550=Hide Morphology
-1733545526=Hide Power Search Tab
 1486635489=CrossWire Bible Society
+1733545526=Hide Power Search Tab
 386941971=Once the text you&rsquo;re looking to study appears on the screen, you have several options. You can navigate within the text by selecting previous chapter or next chapter. Keep in mind that when you&rsquo;re at the beginning of a book of the Bible, previous chapter will take you to last chapter of the previous book. The same holds true when you select next chapter on the last chapter of a book of the Bible.
-1911936993=Today's Devotion
 3239=Greek
+1911936993=Today's Devotion
 -604339487=Generic Books
 380329950=Hide Strongs
 -717182931=However, it&rsquo;s easier to just download the software from the website.
@@ -95,8 +97,8 @@
 82664747=Visit
 -1998487659=What is Parallel Study?
 910591475=The Bible Tool
-28711354=Devotionals
 -1642511764=View search results in
+28711354=Devotionals
 1778673885=Learn More...
 79=O
 -2128886081=
@@ -112,8 +114,9 @@
 1147145891=BIBLICAL QUESTIONS
 230718181=The SWORD Project,
 -640431634=What does &ldquo;Printer Friendly&rdquo; mean?
-771580917=Can I download Bible Tool Bibles and other content?
+1562868479=Show About Tab
 -195667765=DOWNLOADS
+771580917=Can I download Bible Tool Bibles and other content?
 1594652557=Power search allows you to expand on the basic passage search functionality. This includes searching by sentence fragments, or exact phrase. You can also use whatever syntax you like in limiting your search range to specific sections, such as in Revelations chapters 1-5.
 849261155=Hide Notes
 -1762719186=What does &ldquo;printer friendly&rdquo; mean?
@@ -122,8 +125,8 @@
 1371173378=What is &ldquo;Show Morphology&rdquo;?
 968804337=Advanced- Regular Expression
 2245473=Help
-1523222879=The definition of the original word
 -1110669805=Daily Devotionals
+1523222879=The definition of the original word
 -1995153715=How can I get a printed edition of the Bible?
 -2049207299=Conduct search with same search term in
 96917886=Are you the sort of person who creates a Klingon translation of the Bible? Would it cross your mind to build a Hyper-Concordance for the New Testament in your spare time? People are using an XML standard called <acronym title\="Open Scripture Information Standard">OSIS</acronym> to do a number of interesting things.
@@ -137,8 +140,8 @@
 2557855=RtoL
 1830861979=Library
 1983726947=Power Search
--899705719=OSIS Library
 285275739=Bible reference\:
+-899705719=OSIS Library
 106426225=page 
 -420471141=The pronunciation of the original word
 -705894424=This means we will strive to enable you, the user, to have the look / feel you want, the functionality you want, the texts you want (by adding popular ones and allowing you to upload your own) in the format you want (initially electronic or print). Because the tool is open source, if you have some technical skills you are free to download the tool and make changes as you see fit.
@@ -188,6 +191,7 @@
 934874484=Preferred Commentaries\:
 -1276263846=
 -1118638381=We offer a number of free Bible software downloads for Windows, Mac, Linux, and PDAs, produced by CrossWire Bible Society. 
+608402228=Hide Help Tab
 1895908607=Parallel study lets you view texts side by side. You can continue view several texts at the same time, although space becomes an issue at some point depending on the texts being viewed.
 1914634662=Welcome to The Bible Tool-- a free, evolving open source tool for exploring the Bible and related texts online. Created by CrossWire Bible Society, the Society of Biblical Literature and the American Bible Society as the first in a number of coming Bible engagement tools using an XML standard called 
 1463240824=
